# gb

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  DESIGN.md  README.md  install.sh
.claude/: settings.json
.claude/hooks/: auto-create-linear-issue.sh  check-intelligence-inbox.sh  enforce-no-verify-gate.sh  generate-planning-status.sh  pre-linear-api-gate.sh  verify-edge-agentic-compliance.sh
.edge-agentic/: CUSTOMIZATIONS.md
.edge-agentic/local/thoughts/handoffs/: 2026-01-09_13-17-01-pm-security-hardening-complete.md  2026-01-09_15-16-00-pm-gb-fork-foundation.md  2026-01-09_16-45-00-pm-gb-phase-4-complete.md  2026-01-09_17-15-00-pm-gb-v0.1.0-shipped.md  2026-01-09_17-30-00-pm-gb-dylib-issue.md  2026-01-09_18-00-00-pm-gb-swarm-review-complete.md  2026-01-09_19-00-00-pm-option-b-p0-fixes-complete-bug-hunt.md  2026-01-09_21-32-43-pm-p1p2-cleanup-complete.md  2026-01-13_00-03-55-pm-phase4-complete.md  2026-01-24_00-00-00-pm-crates-io-complete.md
agents/: daria.md  fleab.md  gretchen.md  maxine.md  monica.md  phoebe.md  rachel.md  regina.md
crates/g3-cli/: Cargo.toml
crates/g3-cli/src/: lib.rs  theme.rs
crates/g3-cli/tests/: cli_integration_test.rs  streaming_markdown_test.rs
crates/g3-computer-control/: Cargo.toml  build.rs
crates/g3-config/: Cargo.toml
crates/g3-core/: Cargo.toml
crates/g3-core/src/: lib.rs  prompts.rs  session.rs  session_continuation.rs  tool_dispatch.rs
crates/g3-core/src/tools/: executor.rs  mod.rs
crates/g3-ensembles/: Cargo.toml
crates/g3-ensembles/src/: dialogue.rs  flock.rs  lib.rs  status.rs  tests.rs
crates/g3-execution/: Cargo.toml
crates/g3-planner/: Cargo.toml
crates/g3-providers/: Cargo.toml
crates/g3-providers/src/: openai.rs
crates/g3-providers/tests/: streaming_utf8_test.rs
crates/gb-personas/: Cargo.toml
crates/gb-personas/src/: lib.rs
docs/: DESIGN.md  EXCHANGES.md  PERSONAS.md  tools.md
examples/: email-validator-session.md  sample-requirements.md
personas/: architect-monica.md  coach-regina.md  debugger-phoebe.md  explorer-fleab.md  frontend-maxine.md  player-gretchen.md  refactorer-rachel.md  security-daria.md
planning/: _GUIDE.md  _NORTH-STAR.md
planning/_templates/: EPIC.md  HOLDOUT.md  SLICE-DEV.md  SLICE-QA.md  STORY.md
planning/escalations/: _README.md
planning/holdout/: _README.md
planning/remediation/: _README.md
planning/story-reviews/todo/: _README.md
