[workspace]
members = [
    "crates/g3-cli",
    "crates/g3-core",
    "crates/g3-planner",
    "crates/g3-providers",
    "crates/g3-config",
    "crates/g3-execution",
    "crates/g3-computer-control",
    "crates/g3-ensembles",
    "crates/gb-personas"
]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# CLI
clap = { version = "4.0", features = ["derive"] }
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
# Configuration
config = "0.14"
# Utilities
uuid = { version = "1.0", features = ["v4"] }

[package]
name = "g3-glitter-bomb"
version = "0.2.1"
edition = "2021"
authors = ["GB Team", "G3 Team"]
description = "✨💖 GB (G3-Glitter-Bomb) - Dialectical multi-agent autocoding with theatrical personas 💖✨"
license = "MIT"
repository = "https://github.com/bradheitmann/gb"
homepage = "https://github.com/bradheitmann/gb"
documentation = "https://github.com/bradheitmann/gb#readme"
keywords = ["llm", "agents", "ai", "cli", "autocoding"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"
exclude = [
    ".edge-agentic/",
    ".g3/",
    "personas/",
    "docs/",
]

# GB is a fork of G3 by Dhanji R. Prasanna (https://github.com/dhanji/g3)
# Based on Block AI Research - Adversarial Cooperation in Code Synthesis

[features]
default = ["computer-control"]
computer-control = ["g3-cli/computer-control"]

[dependencies]
g3-cli = { path = "crates/g3-cli", version = "0.2.1" }
gb-personas = { path = "crates/gb-personas", version = "0.2.0" }
tokio = { workspace = true }
anyhow = { workspace = true }
g3-providers = { path = "crates/g3-providers", version = "0.2.0" }
serde_json = { workspace = true }

[[bin]]
name = "gb"
path = "src/main.rs"

[[example]]
name = "verify_message_id"
path = "examples/verify_message_id.rs"
