[package]
name = "g3-cli"
version = "0.2.2"
edition = "2021"
description = "CLI interface for G3/GB AI coding agent"
license = "MIT"
repository = "https://github.com/bradheitmann/gb"
homepage = "https://github.com/bradheitmann/gb"
keywords = ["llm", "agents", "ai", "cli", "autocoding"]
categories = ["development-tools", "command-line-utilities"]
readme = "../../README.md"

[features]
default = ["computer-control"]
computer-control = ["g3-core/computer-control"]

[dependencies]
g3-core = { path = "../g3-core", version = "0.2.2" }
g3-config = { path = "../g3-config", version = "0.2.2" }
g3-planner = { path = "../g3-planner", version = "0.2.2" }
g3-providers = { path = "../g3-providers", version = "0.2.2" }
gb-personas = { path = "../gb-personas", version = "0.2.2" }
clap = { workspace = true }
g3-ensembles = { path = "../g3-ensembles", version = "0.2.2" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
rustyline = "17.0.1"
dirs = "5.0"
tokio-util = "0.7"
sha2 = "0.10"
hex = "0.4"
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
crossterm = "0.29.0"
ratatui = "0.29"
termimad = "0.34.0"
regex = "1.10"
syntect = "5.3"
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.8"
