[package]
name = "g3-computer-control"
version = "0.2.0"
edition = "2021"
description = "Computer control (keyboard, mouse, screen) for G3/GB AI agent"
license = "MIT"
repository = "https://github.com/bradheitmann/gb"
homepage = "https://github.com/bradheitmann/gb"
keywords = ["llm", "agents", "ai", "automation", "computer-use"]
categories = ["development-tools", "gui"]
readme = "../../README.md"
exclude = ["vision-bridge/.build/"]

[build-dependencies]
# Only needed for building Swift bridge on macOS

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

shellexpand = "3.1"
# Async trait support
async-trait = "0.1"

# WebDriver support
fantoccini = "0.21"

# macOS dependencies
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
core-foundation = "0.10"
cocoa = "0.25"
objc = "0.2"
accessibility = "0.2"
image = "0.24"

# Linux dependencies
[target.'cfg(target_os = "linux")'.dependencies]
x11 = { version = "2.21", features = ["xlib", "xtest"] }
image = "0.24"

# Windows dependencies
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
] }
