[package]
name = "g3-config"
version = "0.2.0"
edition = "2021"
description = "Configuration management for G3/GB AI coding agent"
license = "MIT"
repository = "https://github.com/bradheitmann/gb"
homepage = "https://github.com/bradheitmann/gb"
keywords = ["llm", "agents", "ai", "config", "autocoding"]
categories = ["development-tools", "config"]
readme = "../../README.md"

[dependencies]
config = { workspace = true }
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
toml = "0.8"
shellexpand = "3.0"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"
serde_json = { workspace = true }
