[package]
name = "g3-core"
version = "0.2.0"
edition = "2021"
description = "Core engine for G3/GB AI coding agent"
license = "MIT"
repository = "https://github.com/bradheitmann/gb"
homepage = "https://github.com/bradheitmann/gb"
keywords = ["llm", "agents", "ai", "autocoding", "dialectical"]
categories = ["development-tools"]
readme = "../../README.md"

[dependencies]
g3-providers = { path = "../g3-providers", version = "0.2.0" }
g3-config = { path = "../g3-config", version = "0.2.0" }
g3-execution = { path = "../g3-execution", version = "0.2.0" }
g3-computer-control = { path = "../g3-computer-control", version = "0.2.0", optional = true }
gb-personas = { path = "../gb-personas", version = "0.2.0" }
tokio = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
async-trait = "0.1"
tokio-stream = "0.1"
tokio-util = "0.7"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
regex = "1.0"
shellexpand = "3.1"
serde_yaml = "0.9"

# tree-sitter for embedded code search
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
# tree-sitter-kotlin = "0.3"  # Temporarily disabled - incompatible with tree-sitter 0.24
tree-sitter-haskell = "0.23"
tree-sitter-scheme = "0.24"
streaming-iterator = "0.1"
walkdir = "2.4"

const_format = "0.2"
base64 = "0.22.1"

[features]
default = ["computer-control"]
computer-control = ["g3-computer-control"]

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.0"
