[package]
name = "g3-ensembles"
version = "0.2.1"
edition = "2021"
description = "Multi-agent ensemble orchestration for G3/GB AI coding agent"
license = "MIT"
repository = "https://github.com/bradheitmann/gb"
homepage = "https://github.com/bradheitmann/gb"
keywords = ["llm", "agents", "ai", "multi-agent", "orchestration"]
categories = ["development-tools"]
readme = "../../README.md"

[dependencies]
g3-core = { path = "../g3-core", version = "0.2.1" }
g3-config = { path = "../g3-config", version = "0.2.0" }
gb-personas = { path = "../gb-personas", version = "0.2.0" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
