[package]
name = "g3-execution"
version = "0.2.0"
edition = "2021"
description = "Code execution engine for G3/GB AI agent"
license = "MIT"
repository = "https://github.com/bradheitmann/gb"
homepage = "https://github.com/bradheitmann/gb"
keywords = ["llm", "agents", "ai", "execution", "sandbox"]
categories = ["development-tools"]
readme = "../../README.md"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
futures = "0.3"
thiserror = { workspace = true }
tracing = { workspace = true }
regex = "1.0"
tempfile = "3.0"
