[package]
name = "g3-planner"
version = "0.2.1"
edition = "2021"
description = "Fast-discovery planner for G3/GB AI coding agent"
license = "MIT"
repository = "https://github.com/bradheitmann/gb"
homepage = "https://github.com/bradheitmann/gb"
keywords = ["llm", "agents", "ai", "planner", "codebase"]
categories = ["development-tools"]
readme = "../../README.md"

[dependencies]
g3-providers = { path = "../g3-providers", version = "0.2.0" }
g3-core = { path = "../g3-core", version = "0.2.1" }
g3-config = { path = "../g3-config", version = "0.2.0" }
serde = { workspace = true }
serde_json = { workspace = true }
const_format = "0.2"
anyhow = { workspace = true }
tokio = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
shellexpand = "3.1"

[dev-dependencies]
tempfile = "3.8"